--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container__header">
             <div class="header__inner">
                 <div class="header__logo">WikiSport</div>
                 <nav class="nav">
@@ -25,7 +25,7 @@
 
 
     <div class="intro">
-        <div class="container1">
+        <div class="container__intro">
             <div class="intro__inner">
                 <h2 class="intro__suptitle">Everything is possible. The impossible just needed more time.</h2>
                 <h1 class="intro__title">Welcome to SportWiki!</h1>
