--- a/calc/index.html
+++ b/calc/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Калькулятор</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-        <h1 class="logo" href="">Just_Error</h1>
+    <button class="TeamName"><a href="../main_list/index.html" style="color: rgb(53, 47, 47);">Just error</a></button>
         <hr>
     <div class="calc">
         <div class="calc-screen">
