--- a/value/index.html
+++ b/value/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 
 		<!-- Bootstrap CSS -->
 		<link
@@ -15,7 +15,7 @@
 			crossorigin="anonymous"
 		/>
 
-		<title>Конвертер валют на JavaScript</title>
+		<title>Конвертер валют</title>
 
 		<style>
 			.footer__link {
@@ -23,7 +23,19 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body class="body">
+		<header class="header">
+			<div class="container">
+				<div class="header__inner">
+					<div class="logo"><a href="../main_list/index.html" style=
+						"color: rgb(26, 25, 25); 
+						border: 0;
+						font-weight: 700;
+						font-size: 50px;
+						text-decoration: none;">Just error</a></div>
+				</div>
+			</div>
+		</header>
 		<div class="container pt-5 pb-5">
 			<div class="row justify-content-center">
 				<div class="col-6">
