--- a/Weather/index.html
+++ b/Weather/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <h1 class="title">Weather forecast</h1>
-        <h2 class="TeamName">Just_Error</h2>
+        <button class="TeamName"><a href="../main_list/index.html" style="color: white;">Just error</a></button>
         <form class="form" id="form">
             <input id="inputCity" class="input" type="text" placeholder="Enter the city">
             <button class="btn">SHOW</button>
